[package]
name = "fuseqemu"
version = "0.1.0"
authors = ["Rafael Gieschke <rafael@gieschke.de>", "based on fusenbd (<https://github.com/vi/fusenbd>) by Vitaly \"_Vi\" Shukela <vi0oss@gmail.com> "]
description = "FUSE-based client that exposes qcow/qcow2/... disk images as a plain file (via qemu-nbd)"
readme = "README.md"
keywords = ["fuse", "nbd", "network-block-device", "qemu", "qemu-nbd", "qcow", "qcow2"]
categories = ["filesystem","network"]
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/rafaelgieschke/fuseqemu"


[dependencies]
fuse = "0.3.1"
structopt = { version = "0.2", default-features = false }
nbd = "0.2.1"
time = "0.1"
libc = "0.2"
readwriteseekfs = "0.1.0"
bufstream="0.1"
rand = "0.6"
